objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Year__c</fullName>
        <formula>TEXT(YEAR(StartDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Content Marketing</fullName>
                </value>
                <value>
                    <fullName>Digital Banners</fullName>
                </value>
                <value>
                    <fullName>Direct Calling</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Facebook Page</fullName>
                </value>
                <value>
                    <fullName>Forums</fullName>
                </value>
                <value>
                    <fullName>In App</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Infographics</fullName>
                </value>
                <value>
                    <fullName>In Store</fullName>
                </value>
                <value>
                    <fullName>Kiosk</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Page</fullName>
                </value>
                <value>
                    <fullName>Medicare Education Event</fullName>
                </value>
                <value>
                    <fullName>Medicare Sales Event</fullName>
                </value>
                <value>
                    <fullName>Microsite</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Pay Per Click (PPC)</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Remarketing</fullName>
                </value>
                <value>
                    <fullName>Sales Meetings</fullName>
                </value>
                <value>
                    <fullName>Search Engine Optimization (SEO)</fullName>
                </value>
                <value>
                    <fullName>Sports Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CampaignContentDocumentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the primary document (or other content) that is the subject of the campaign. Could be content being promoted in the campaign or a script to be used when talking to campaign targets. Points to the child Campaign Content Document (CampaignContentDocument__c) record that associates a Salesforce File with a Campaign.</description>
        <label>Campaign Content Document</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__CampaignContentDocument__c.vlocity_ins__CampaignId__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>vlocity_ins__CampaignContentDocument__c.vlocity_ins__IsPrimary__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__CampaignContentDocument__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContentDocumentTitle__c</fullName>
        <description>Formula: Title as defined on the campaign content document association record.</description>
        <formula>vlocity_ins__CampaignContentDocumentId__r.vlocity_ins__ContentTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Document Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EmailTemplate__c</fullName>
        <description>Name of the email template to send to campaign members. Matches the Template Unique Name (DeveloperName) of a Salesforce Email Template (EmailTemplate object).</description>
        <inlineHelpText>Email template used to send email to campaign member.</inlineHelpText>
        <label>Email Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FollowUpTo__c</fullName>
        <description>Identifies the type of object that should be created when a user creates a &quot;follow up&quot; item for this campaign. Values must be one of “Log Call”, “Case”, “Event”, “Opportunity”, “Task”, “Order”.</description>
        <label>Follow Up To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineOfBusiness__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group Dental</fullName>
                </value>
                <value>
                    <fullName>Group Medical</fullName>
                </value>
                <value>
                    <fullName>Group Vision</fullName>
                </value>
                <value>
                    <fullName>Individual Dental</fullName>
                </value>
                <value>
                    <fullName>Individual Medical</fullName>
                </value>
                <value>
                    <fullName>Individual Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__MassEmailContent__c</fullName>
        <label>Email Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MassEmailSubject__c</fullName>
        <label>Email Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessLanguage__c</fullName>
        <defaultValue>&apos;English&apos;</defaultValue>
        <description>Used to associate a Vlocity OmniScript to run when executing the campaign for each target. Process Language specifies the Language value of the OmniScript.</description>
        <label>Process Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessPrefillBundle__c</fullName>
        <description>Used when executing the campaign for each target via a Vlocity OmniScript. The Process Prefill Bundle specifies the prefill DataRaptor mapping bundle to use when launching the OmniScript.</description>
        <label>Process Prefill Bundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessSubType__c</fullName>
        <defaultValue>&apos;Default&apos;</defaultValue>
        <description>Used to associate a Vlocity OmniScript to run when executing the campaign for each target. Process Sub Type specifies the Sub Type value of the OmniScript.</description>
        <label>Process Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessType__c</fullName>
        <defaultValue>&apos;Campaign&apos;</defaultValue>
        <description>Used to associate a Vlocity OmniScript to run when executing the campaign for each target. Process Type specifies the Type value of the OmniScript.</description>
        <label>Process Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocityinsX_CalltoAction__c</fullName>
        <label>Call to Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request to Like</fullName>
                </value>
                <value>
                    <fullName>Request to Complete Form</fullName>
                </value>
                <value>
                    <fullName>Request to Download Content</fullName>
                </value>
                <value>
                    <fullName>Request for Meeting</fullName>
                </value>
                <value>
                    <fullName>Request for Chat</fullName>
                </value>
                <value>
                    <fullName>Request for Call Back</fullName>
                </value>
                <value>
                    <fullName>Request to Call In</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocityinsX_LineofBusiness__c</fullName>
        <label>Line of Business (LOB)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small Group</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Agency / Broker</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocityinsX_MarketingEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Event</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocityinsX_MarketingTrigger__c</fullName>
        <label>Marketing Trigger</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocityinsX_LineofBusiness__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Annual Enrollment</fullName>
                </value>
                <value>
                    <fullName>During Annual Enrollment (upsell voluntary products)</fullName>
                </value>
                <value>
                    <fullName>Provider network (major changes)</fullName>
                </value>
                <value>
                    <fullName>CEO, CFO or company owner changes</fullName>
                </value>
                <value>
                    <fullName>Annual Election Period (AEP)</fullName>
                </value>
                <value>
                    <fullName>Special Election Period (SEP)</fullName>
                </value>
                <value>
                    <fullName>Turning 65 (&quot;Aging In&quot;)</fullName>
                </value>
                <value>
                    <fullName>Disenrollment requests (&quot;save desk&quot;)</fullName>
                </value>
                <value>
                    <fullName>Predictive Modeling (e.g. loss of network physician)</fullName>
                </value>
                <value>
                    <fullName>Year-round product promotion (5 star health plan)</fullName>
                </value>
                <value>
                    <fullName>Year-round brand promotion (all health plans)</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment Period (OEP)</fullName>
                </value>
                <value>
                    <fullName>Year-round brand promotion</fullName>
                </value>
                <value>
                    <fullName>Ancillary products upsell (year-round)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>